using UnityEngine;

namespace Assets.Scripts
{
    public static class AnimationService
    {
        public static class States
        {
            public static string Attack => "Attack";
        }

        public static class Parameters
        {
            public static string MotionX => "MotionX";
            public static string MotionY => "MotionY";
        }
    }
}